Updated notebook with mouse data example and readme file

--- a/notebooks/example_iss_mousebrain.ipynb
+++ b/notebooks/example_iss_mousebrain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from decoding_functions import *\n",
-    "from spot_detection_functions import *\n",
-    "from reading_data_functions import *"
+    "from postcode.decoding_functions import *\n",
+    "from postcode.spot_detection_functions import *\n",
+    "from postcode.reading_data_functions import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
