Updated humanbrain example

--- a/notebooks/example_iss_humanbrain.ipynb
+++ b/notebooks/example_iss_humanbrain.ipynb
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from decoding_functions import *\n",
-    "from spot_detection_functions import *\n",
-    "from reading_data_functions import *"
+    "from postcode.decoding_functions import *\n",
+    "from postcode.spot_detection_functions import *\n",
+    "from postcode.reading_data_functions import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,13 +35,14 @@
     "#dataset_name = 'N1C_OB10036_x20'\n",
     "dataset_name = 'N1234F_OB10037_x20'\n",
     "#dataset_name = 'N1234F_OB10037_20x_fake-anchor'\n",
-    "data_path = '/nfs/research1/gerstung/mg617/ISS_data/' + dataset_name + '/'\n",
-    "#data_path = '/Users/mg617/nfs/research1/gerstung/mg617/ISS_data/' + dataset_name + '/'"
+    "#data_path = '/nfs/research1/gerstung/mg617/ISS_data/' + dataset_name + '/'\n",
+    "#data_path = '/Users/mg617/nfs/research1/gerstung/mg617/ISS_data/' + dataset_name + '/'\n",
+    "data_path = '/Users/mg617/data/' + dataset_name + '/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# input parameters for loading the tiles and for spot detection\n",
     "tifs_path = data_path + 'selected_2k_tiles/'\n",
-    "tile_names = read_csv(data_path + 'tile_names.csv')\n",
+    "#tile_names = read_csv(data_path + 'tile_names.csv')\n",
     "tiles_info={'tile_size':2000, 'y_max':17, 'x_max':15, 'y_max_size':2000, 'x_max_size':2000, 'filename_prefix':'cycles_combined_opt_flow_registered_'}\n",
     "#tiles_to_load = {'y_start':10, 'y_end':tiles_info['y_max'], 'x_start':0, 'x_end':tiles_info['x_max']} #lower part\n",
     "tiles_to_load = {'y_start':1, 'y_end':9, 'x_start':0, 'x_end':tiles_info['x_max']} #upper part\n",
@@ -92,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extracted_spots_path = data_path + 'decoding/extracted-spots/'\n",
-    "# spots = np.load(extracted_spots_path + dataset_name + '_spots_shift_0_75_noth_sep3.npy')\n",
-    "# spots_loc = read_csv(extracted_spots_path + dataset_name + '_spots_locations_shift_0_75_noth_sep3.csv')\n",
+    "extracted_spots_path = data_path + 'decoding/extracted-spots/'\n",
+    "spots = np.load(extracted_spots_path + dataset_name + '_spots_shift_0_75_noth_sep3_up_masked.npy')\n",
+    "spots_loc = read_csv(extracted_spots_path + dataset_name + '_spots_locations_shift_0_75_noth_sep3_up_masked.csv')\n",
     "# spots_notophat = np.load(extracted_spots_path + dataset_name + '_spots_shift_0_75_noth_sep3_notophat.npy')"
    ]
   },
@@ -225,26 +226,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load extracted spots\n",
-    "extracted_spots_path = data_path + 'decoding/extracted-spots/'\n",
-    "spots = np.load(extracted_spots_path + dataset_name + '_spots_shift_0_75_noth_up_masked.npy')\n",
-    "spots_loc = read_csv(extracted_spots_path + dataset_name + '_spots_locations_shift_0_75_noth_up_masked.csv')"
+    "# #Load extracted spots\n",
+    "# extracted_spots_path = data_path + 'decoding/extracted-spots/'\n",
+    "# spots = np.load(extracted_spots_path + dataset_name + '_spots_shift_0_75_noth_up_masked.npy')\n",
+    "# spots_loc = read_csv(extracted_spots_path + dataset_name + '_spots_locations_shift_0_75_noth_up_masked.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In total 537701 spots detected\n"
+      "In total 631127 spots detected\n"
      ]
     }
    ],
@@ -254,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:02<00:00, 25.58it/s]\n"
+      "100%|██████████| 60/60 [00:54<00:00,  1.09it/s]\n"
      ]
     }
    ],
@@ -273,6 +274,15 @@
     "df_class_codes = np.concatenate((channels_info['barcodes_AGCT'],['NA','0000','NA']))\n",
     "decoded_spots_df = decoding_output_to_dataframe(out, df_class_names, df_class_codes)\n",
     "decoded_df = pd.concat([decoded_spots_df, spots_loc], axis=1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#np.save(extracted_spots_path + dataset_name + '_probs_shift_0_75_noth_sep3_up_masked.npy', out['class_probs'])"
    ]
   },
   {
