--- a/notebooks/example_iss_mousebrain.ipynb
+++ b/notebooks/example_iss_mousebrain.ipynb
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Plot a histogram of barcode assignments"
+    "* Plot histogram of barcode assignments"
    ]
   },
   {
