--- a/notebooks/example_iss_starfish.ipynb
+++ b/notebooks/example_iss_starfish.ipynb
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "# pip install starfish\n",
+    "# pip install starfish==0.2.2\n",
     "import starfish"
    ]
   },
@@ -84,12 +84,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16/16 [00:00<00:00, 114.96it/s]\n",
-      "100%|██████████| 16/16 [00:00<00:00, 703.73it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 56.95it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 354.13it/s]\n",
-      "100%|██████████| 16/16 [00:00<00:00, 120.08it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 153.08it/s]\n"
+      "100%|██████████| 16/16 [00:00<00:00, 113.05it/s]\n",
+      "100%|██████████| 16/16 [00:00<00:00, 153.68it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 57.47it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 280.97it/s]\n",
+      "100%|██████████| 16/16 [00:00<00:00, 102.34it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 123.10it/s]\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 241.59it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 148.72it/s]\n"
      ]
     }
    ],
@@ -251,8 +251,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:02<00:00, 20.93it/s]\n",
-      "100%|██████████| 257/257 [00:00<00:00, 2371.88it/s]\n"
+      "100%|██████████| 60/60 [00:05<00:00, 11.01it/s]\n",
+      "100%|██████████| 257/257 [00:00<00:00, 758.31it/s]\n"
      ]
     }
    ],
@@ -437,8 +437,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:01<00:00, 32.06it/s]\n",
-      "100%|██████████| 257/257 [00:00<00:00, 1925.40it/s]\n"
+      "100%|██████████| 60/60 [00:03<00:00, 16.38it/s]\n",
+      "100%|██████████| 257/257 [00:00<00:00, 684.93it/s]\n"
      ]
     }
    ],
@@ -564,9 +564,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 61.76it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 248.07it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 200.20it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 34.18it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 105.54it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 116.26it/s]\n"
      ]
     },
     {
@@ -617,20 +617,6 @@
     "plt.plot(x_coord_2, y_coord_2, 'ob', markersize=2)\n",
     "plt.title(f'PoSTcode decoding [Red: {GENE1}={df_class_codes[df_class_names==GENE1][0]}, Blue: {GENE2}={df_class_codes[df_class_names==GENE2][0]}]');"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
