--- a/notebooks/example_iss_tile.ipynb
+++ b/notebooks/example_iss_tile.ipynb
@@ -99,16 +99,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:05<00:00,  5.61s/it]\n"
+      "100%|██████████| 1/1 [00:05<00:00,  5.70s/it]\n"
      ]
     }
    ],
    "source": [
     "tifs_path = data_path + 'selected-tiles/'\n",
     "tile_names = read_csv(data_path + 'tile_names.csv')\n",
-    "tiles_info = {'tile_size':1000, 'y_max':16, 'x_max':23, 'y_max_size':1000, 'x_max_size':1000, 'filename_prefix':'out_opt_flow_registered_'}\n",
-    "tiles_to_load = {'y_start':1, 'y_end':1, 'x_start':12, 'x_end':12} # tile(s) to load from the list tile_names (stored as tif files in tifs_path)\n",
-    "spots_params = {'trackpy_spot_diam':5} # parameters for spot detection: spot diameter must to be specified\n",
+    "x_min, x_max, y_min, y_max = find_xy_range_of_tile_names(tile_names['selected_tile_names'])\n",
+    "tiles_info = {'tile_size':1000, 'y_max_size':1000, 'x_max_size':1000, 'filename_prefix':'out_opt_flow_registered_', 'y_max':y_max, 'x_max':x_max} #provide 'tile_size' as well as 'y_max_size' and 'x_max_size' to indicate the size of tiles at the edge in each direction\n",
+    "tiles_to_load = {'y_start':1, 'y_end':1, 'x_start':12, 'x_end':12} #tile(s) to load \n",
+    "spots_params = {'trackpy_spot_diam':5} #parameters for spot detection: spot diameter must to be specified\n",
     "spots_params['trackpy_prc'] = 0 #by default this parameter is set to 64, decrease it to select more spots\n",
     "spots_params['trackpy_sep'] = 2 #by default this paramerer is set to 'trackpy_spot_diam'+1\n",
     "spots_out = load_tiles_to_extract_spots(tifs_path, channels_info, C, R, tile_names, tiles_info, tiles_to_load, spots_params, \n",
@@ -155,8 +156,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:02<00:00, 26.51it/s]\n",
-      "100%|██████████| 257/257 [00:00<00:00, 1949.97it/s]\n"
+      "100%|██████████| 60/60 [00:02<00:00, 26.26it/s]\n",
+      "100%|██████████| 257/257 [00:00<00:00, 3074.54it/s]\n"
      ]
     }
    ],
@@ -340,9 +341,10 @@
    "source": [
     "x00 = 600; y00 = 350 #coordinates of the zoom (between 0--1000)\n",
     "delta = 200 #size of the zoom in each axis (up to 1000)\n",
-    "anchor_zoom = spots_out['anchors'][y00:y00+delta,x00:x00+delta]\n",
-    "y00 = y00+(tiles_to_load['y_end']-tiles_to_load['y_start'])*tiles_info['tile_size']\n",
-    "x00 = x00+(tiles_to_load['x_end']-tiles_to_load['x_start'])*tiles_info['tile_size']\n",
+    "anchor_zoom = spots_out['anchors'][y00:y00+delta,x00:x00+delta] #anchor of the last loaded tile\n",
+    "#in case multiple tiles were used, find coordinates corresponding to the last one loaded\n",
+    "y00 = y00+(int(decoded_df.Tile.iloc[-1][-2:].replace('Y',''))-tiles_to_load['y_start'])*tiles_info['tile_size']\n",
+    "x00 = x00+(int(decoded_df.Tile.iloc[-1][1:3].replace('_',''))-tiles_to_load['x_start'])*tiles_info['tile_size']\n",
     "\n",
     "plt.figure(num=None, figsize=(12, 4), dpi=100, facecolor='w', edgecolor='k')\n",
     "plt.subplot(1,3,1)\n",
