--- a/notebooks/postcode_paper_mousebrain.ipynb
+++ b/notebooks/postcode_paper_mousebrain.ipynb
@@ -100,9 +100,10 @@
     "if not load_already_extracted:\n",
     "    tifs_path = data_path + 'selected-tiles/'\n",
     "    tile_names = read_csv(data_path + 'tile_names.csv')\n",
-    "    tiles_info = {'tile_size':1000, 'y_max':16, 'x_max':23, 'y_max_size':1000, 'x_max_size':1000, 'filename_prefix':'out_opt_flow_registered_'}\n",
-    "    tiles_to_load = {'y_start':0, 'y_end':tiles_info['y_max']-1, 'x_start':10, 'x_end':tiles_info['x_max']} # all possible tiles used\n",
-    "    spots_params = {'trackpy_spot_diam':5} # parameters for spot detection: spot diameter must be specified\n",
+    "    x_min, x_max, y_min, y_max = find_xy_range_of_tile_names(tile_names['selected_tile_names'])\n",
+    "    tiles_info = {'tile_size':1000, 'y_max_size':1000, 'x_max_size':1000, 'filename_prefix':'out_opt_flow_registered_', 'y_max':y_max, 'x_max':x_max} #provide 'tile_size' as well as 'y_max_size' and 'x_max_size' to indicate (non-standard) size of tiles at the edge (y_max/x_max)\n",
+    "    tiles_to_load = {'y_start':y_min, 'y_end':y_max-1, 'x_start':x_min, 'x_end':x_max} #all possible tiles used\n",
+    "    spots_params = {'trackpy_spot_diam':5} #parameters for spot detection: spot diameter must be specified\n",
     "    spots_params['trackpy_prc'] = 0 #by default this parameter is set to 64, decrease it to select more spots\n",
     "    spots_params['trackpy_sep'] = 2 #by default this paramerer is set to 'trackpy_spot_diam'+1\n",
     "    spots_out = load_tiles_to_extract_spots(tifs_path, channels_info, C, R, tile_names, tiles_info, tiles_to_load, spots_params, \n",
@@ -153,8 +154,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:09<00:00,  6.56it/s]\n",
-      "100%|██████████| 257/257 [00:06<00:00, 37.09it/s]\n"
+      "100%|██████████| 60/60 [00:08<00:00,  7.16it/s]\n",
+      "100%|██████████| 257/257 [00:06<00:00, 41.52it/s]\n"
      ]
     }
    ],
