--- a/notebooks/postcode_paper_mousebrain.ipynb
+++ b/notebooks/postcode_paper_mousebrain.ipynb
@@ -107,11 +107,11 @@
     "    spots_params['trackpy_prc'] = 0 #by default this parameter is set to 64, decrease it to select more spots\n",
     "    spots_params['trackpy_sep'] = 2 #by default this paramerer is set to 'trackpy_spot_diam'+1\n",
     "    spots_out = load_tiles_to_extract_spots(tifs_path, channels_info, C, R, tile_names, tiles_info, tiles_to_load, spots_params, \n",
-    "                                            anchors_cy_ind_for_spot_detect=0, compute_also_without_tophat=False)\n",
+    "                                            anchors_cy_ind_for_spot_detect=0, compute_also_without_tophat=False, parallel=True)\n",
     "else:\n",
     "    spots_out = {}\n",
     "    spots_out['spots'] = np.load(data_path + 'decoding/extracted-spots/' + dataset_name + '_spots_trackpy_0_sep2.npy')\n",
-    "    spots_out['spots_loc'] = read_csv(data_path + 'decoding/extracted-spots/' + dataset_name + '_spots_trackpy_0_sep2_locations.csv')                                                                 "
+    "    spots_out['spots_loc'] = read_csv(data_path + 'decoding/extracted-spots/' + dataset_name + '_spots_trackpy_0_sep2_locations.csv')       "
    ]
   },
   {
@@ -154,8 +154,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:08<00:00,  7.16it/s]\n",
-      "100%|██████████| 257/257 [00:06<00:00, 41.52it/s]\n"
+      "100%|██████████| 60/60 [00:08<00:00,  7.26it/s]\n",
+      "100%|██████████| 257/257 [00:05<00:00, 44.42it/s]\n"
      ]
     }
    ],
