--- a/notebooks/example_iss_tile.ipynb
+++ b/notebooks/example_iss_tile.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Decoding specified ISS tile(s)\n",
-    "This notebook provides an exampe how to decode an ISS tile stored at the local directory."
+    "This notebook provides an exampe how to decode an ISS tile stored at a local directory."
    ]
   },
   {
