Tested from a local directory

--- a/notebooks/example_iss_tile.ipynb
+++ b/notebooks/example_iss_tile.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Decoding specified ISS tile(s)\n",
-    "This notebook provides an exampe how to decode an ISS tile stored at a local directory."
+    "This notebook provides an exampe how to decode an ISS tile from the mouse brain dataset used in the PoSTcode paper that is stored at local directory ``postcode/example-iss-tile-data/``."
    ]
   },
   {
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "dataset_name = 'NT_ISS_KR0018'\n",
-    "data_path = '/Users/mg617/data/'+ dataset_name + '/' "
+    "data_path = os.path.dirname(os.getcwd()) + '/example-iss-tile-data/' + dataset_name + '/' "
    ]
   },
   {
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Specify input parameters for loading tif tiles and for spot detection in each tile using trackpy, for which directory ``data_path`` has to contain tile_names.csv and directory ``tifs_path`` registered tif files (here ``tifs_path = data_path + 'selected-tiles/'``). Alternatively, load already extracted spots from directory ``data_path + 'decoding/extracted-spots/' ``."
+    "* Specify input parameters for spot detection via trackpy in dictionary ``spots_params``, which has to contain value for key ``'trackpy_spot_diam'`` indicating spot diameter in pixels. Here, a single tile with coordinates 'X12_Y1' is loaded from directory ``data_path``, which contains tile_names.csv and sub-directory ``tifs_path = data_path + 'selected-tiles/'`` with registered tif files. "
    ]
   },
   {
@@ -99,19 +99,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:04<00:00,  4.94s/it]\n"
+      "100%|██████████| 1/1 [00:06<00:00,  6.24s/it]\n"
      ]
     }
    ],
    "source": [
-    "tifs_path = data_path + 'selected-tiles/'\n",
-    "tile_names = read_csv(data_path + 'tile_names.csv')\n",
-    "x_min, x_max, y_min, y_max = find_xy_range_of_tile_names(tile_names['selected_tile_names'])\n",
-    "tiles_info = {'tile_size':1000, 'y_max_size':1000, 'x_max_size':1000, 'filename_prefix':'out_opt_flow_registered_', 'y_max':y_max, 'x_max':x_max} #provide 'tile_size' as well as 'y_max_size' and 'x_max_size' to indicate the size of tiles at the edge in each direction\n",
-    "tiles_to_load = {'y_start':1, 'y_end':1, 'x_start':12, 'x_end':12} #tile(s) to load \n",
     "spots_params = {'trackpy_spot_diam':5} #parameters for spot detection: spot diameter must to be specified\n",
     "spots_params['trackpy_prc'] = 0 #by default this parameter is set to 64, decrease it to select more spots\n",
     "spots_params['trackpy_sep'] = 2 #by default this paramerer is set to 'trackpy_spot_diam'+1\n",
+    "tifs_path = data_path + 'selected-tiles/'\n",
+    "tile_names = read_csv(data_path + 'tile_names.csv')\n",
+    "x_min, x_max, y_min, y_max = find_xy_range_of_tile_names(tile_names['selected_tile_names'])\n",
+    "tiles_info = {'tile_size':1000, 'y_max_size':1000, 'x_max_size':1000, 'filename_prefix':'out_opt_flow_registered_', 'y_max':y_max, 'x_max':x_max}\n",
+    "tiles_to_load = {'y_start':1, 'y_end':1, 'x_start':12, 'x_end':12} #tile(s) to load (only 'X12_Y1' tile is stored locally)\n",
     "spots_out = load_tiles_to_extract_spots(tifs_path, channels_info, C, R, tile_names, tiles_info, tiles_to_load, spots_params, \n",
     "                                        anchors_cy_ind_for_spot_detect=0, compute_also_without_tophat=False, return_anchors=True)                                                                "
    ]
@@ -156,8 +156,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:01<00:00, 33.22it/s]\n",
-      "100%|██████████| 257/257 [00:00<00:00, 3013.01it/s]\n"
+      "100%|██████████| 60/60 [00:02<00:00, 29.37it/s]\n",
+      "100%|██████████| 257/257 [00:00<00:00, 2892.85it/s]\n"
      ]
     }
    ],
