Tested on selected tiles folder

--- a/notebooks/postcode_paper_mousebrain.ipynb
+++ b/notebooks/postcode_paper_mousebrain.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Mouse brain example\n",
-    "This notebook reproduces decoding of the right hemisphere of the mouse brain example used in the paper. Tha minimal data (1GB) required to run this notebook can be downloaded at [link](), while the registered tif files (30GB) can be downloaded at [link]()."
+    "This notebook reproduces decoding of the right hemisphere of the mouse brain example used in the paper. Tha minimal data (140MB) required to run this notebook conatins channel_info.csv, taglist.csv and directory 'decoding' with already extracted spots and decoded via different methods, which can be downloaded at [link](). The same link contains directory 'selected-tiles' with the registered tif files (9.13GB), which are required for spot detection (and running the code below with ``load_already_extracted = False``)."
    ]
   },
   {
@@ -94,14 +94,22 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 170/170 [00:03<00:00, 43.76it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "load_already_extracted = True\n",
+    "load_already_extracted = False\n",
     "if not load_already_extracted:\n",
     "    tifs_path = data_path + 'selected-tiles/'\n",
     "    tile_names = read_csv(data_path + 'tile_names.csv')\n",
     "    x_min, x_max, y_min, y_max = find_xy_range_of_tile_names(tile_names['selected_tile_names'])\n",
-    "    tiles_info = {'tile_size':1000, 'y_max_size':1000, 'x_max_size':1000, 'filename_prefix':'out_opt_flow_registered_', 'y_max':y_max, 'x_max':x_max} #provide 'tile_size' as well as 'y_max_size' and 'x_max_size' to indicate (non-standard) size of tiles at the edge (y_max/x_max)\n",
+    "    tiles_info = {'tile_size':1000, 'y_max_size':1000, 'x_max_size':1000, 'filename_prefix':'out_opt_flow_registered_', 'y_max':y_max, 'x_max':x_max} #provide 'tile_size' as well as 'y_max_size' and 'x_max_size' to indicate (non-standard) size of tiles at the edge coordinated (y_max/x_max)\n",
     "    tiles_to_load = {'y_start':y_min, 'y_end':y_max-1, 'x_start':x_min, 'x_end':x_max} #all possible tiles used\n",
     "    spots_params = {'trackpy_spot_diam':5} #parameters for spot detection: spot diameter must be specified\n",
     "    spots_params['trackpy_prc'] = 0 #by default this parameter is set to 64, decrease it to select more spots\n",
@@ -154,8 +162,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:09<00:00,  6.55it/s]\n",
-      "100%|██████████| 257/257 [00:06<00:00, 37.47it/s]\n"
+      "100%|██████████| 60/60 [00:08<00:00,  6.78it/s]\n",
+      "100%|██████████| 257/257 [00:05<00:00, 47.67it/s]\n"
      ]
     }
    ],
@@ -335,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -547,6 +555,7 @@
     }
    ],
    "source": [
+    "# for the following plot of confusion matrices, package sklearn is required\n",
     "kmeans = decoded_df_kmeans.Name.copy()\n",
     "kmeans[decoded_df_kmeans.Score<0.9] = 'thr'\n",
     "argmax = decoded_df_argmax.Name.copy()\n",
