Updated text in the notebooks

--- a/notebooks/example_iss_tile.ipynb
+++ b/notebooks/example_iss_tile.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Specify input parameters for spot detection via trackpy in dictionary ``spots_params``, which has to contain value for key ``'trackpy_spot_diam'`` indicating spot diameter in pixels. Here, a single tile with coordinates 'X12_Y1' is loaded from directory ``data_path``, which contains tile_names.csv and sub-directory ``tifs_path = data_path + 'selected-tiles/'`` with registered tif files. "
+    "* Input parameters for spot detection via trackpy should be specified in dictionary ``spots_params``, which has to contain value for key ``'trackpy_spot_diam'`` indicating spot diameter in pixels."
    ]
   },
   {
@@ -111,7 +111,7 @@
     "tile_names = read_csv(data_path + 'tile_names.csv')\n",
     "x_min, x_max, y_min, y_max = find_xy_range_of_tile_names(tile_names['selected_tile_names'])\n",
     "tiles_info = {'tile_size':1000, 'y_max_size':1000, 'x_max_size':1000, 'filename_prefix':'out_opt_flow_registered_', 'y_max':y_max, 'x_max':x_max}\n",
-    "tiles_to_load = {'y_start':1, 'y_end':1, 'x_start':12, 'x_end':12} #tile(s) to load (only 'X12_Y1' tile is stored locally)\n",
+    "tiles_to_load = {'y_start':1, 'y_end':1, 'x_start':12, 'x_end':12} #tile(s) to load (only 'X12_Y1' tile of size 1000x1000 is stored locally)\n",
     "spots_out = load_tiles_to_extract_spots(tifs_path, channels_info, C, R, tile_names, tiles_info, tiles_to_load, spots_params, \n",
     "                                        anchors_cy_ind_for_spot_detect=0, compute_also_without_tophat=False, return_anchors=True)                                                                "
    ]
