Tested online data and added bioRxiv link

--- a/notebooks/postcode_paper_mousebrain.ipynb
+++ b/notebooks/postcode_paper_mousebrain.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Specify directory location ``data_path`` with channel_info.csv and taglist.csv"
+    "* Specify directory location ``data_path`` (location of the folder that can be downloaded from the link above)"
    ]
   },
   {
@@ -57,7 +57,8 @@
    "outputs": [],
    "source": [
     "dataset_name = 'NT_ISS_KR0018'\n",
-    "data_path = '/Users/mg617/data/'+ dataset_name + '/' "
+    "#data_path = '/Users/mg617/data/'+ dataset_name + '/' \n",
+    "data_path = '/Users/mg617/Downloads/S-BSST700/' "
    ]
   },
   {
@@ -94,17 +95,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 170/170 [00:03<00:00, 43.76it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "load_already_extracted = False\n",
+    "load_already_extracted = True\n",
     "if not load_already_extracted:\n",
     "    tifs_path = data_path + 'selected-tiles/'\n",
     "    tile_names = read_csv(data_path + 'tile_names.csv')\n",
@@ -162,8 +155,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:08<00:00,  6.78it/s]\n",
-      "100%|██████████| 257/257 [00:05<00:00, 47.67it/s]\n"
+      "100%|██████████| 60/60 [00:08<00:00,  7.39it/s]\n",
+      "100%|██████████| 257/257 [00:06<00:00, 40.73it/s]\n"
      ]
     }
    ],
@@ -343,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
