Added data link

--- a/notebooks/postcode_paper_mousebrain.ipynb
+++ b/notebooks/postcode_paper_mousebrain.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Mouse brain example\n",
-    "This notebook reproduces decoding of the right hemisphere of the mouse brain example used in the paper. Tha minimal data (140MB) required to run this notebook conatins channel_info.csv, taglist.csv and directory 'decoding' with already extracted spots and decoded via different methods, which can be downloaded at [link](). The same link contains directory 'selected-tiles' with the registered tif files (9.13GB), which are required for spot detection (and running the code below with ``load_already_extracted = False``)."
+    "This notebook reproduces decoding of the right hemisphere of the mouse brain example used in the paper. Tha minimal data (140MB) required to run this notebook conatins channel_info.csv, taglist.csv and directory 'decoding' with already extracted spots and decoded via different methods, which can be downloaded at [link](https://www.ebi.ac.uk/biostudies/studies/S-BSST700). The same link contains directory 'selected-tiles' with the registered tif files (9.13GB), which are required for spot detection (and running the code below with ``load_already_extracted = False``)."
    ]
   },
   {
